# Matrix

./: .gitignore  .runsettings  Array.cpp  Array.h  ArrayTest.cpp  ArrayTest.h  BasicMatrix.cpp  BasicMatrix.h  BasicMatrixTest.cpp  BasicMatrixTest.h  CMakeLists.txt  CodeCoverage.runsettings  EllipseFit.cpp  EllipseFit.h  Matrix.cpp  Matrix.h  MatrixTest.cpp  MatrixTest.h  README.md  RixMatrix.sln  RixMatrix.sln.DotSettings  SolverMatrix.cpp  SolverMatrixTest.cpp  keywords.txt  library.properties  post-build.cmd
examples/RixMatrixDemo/: RixMatrixDemo.ino
lib/: CMakeLists.txt  tools.cmake
src/: Array.cpp  Array.h  CMakeLists.txt  Matrix.cpp  Matrix.h  SolverMatrix.cpp  SolverMatrix.h  keywords.txt  output.txt  src.vcxproj  src.vcxproj.filters
test/: ArrayTest.cpp  ArrayTest.h  CMakeLists.txt  Main.cpp  MatrixTest.cpp  MatrixTest.h  MemTest.cpp  RixMatrixDemo.cpp  SolverMatrixTest.cpp  test.vcxproj
